Changes to be committed: 	modified:   Bibtex/lib.bib

--- a/Bibtex/lib.bib
+++ b/Bibtex/lib.bib
@@ -79,3 +79,17 @@
     pages={221–230}
 }
 
+@article{Tkachenko_2015,
+    title={Low-temperature CO oxidation by transition metal polycation exchanged low-silica faujasites},
+    volume={179},
+    ISSN={0926-3373},
+    url={http://dx.doi.org/10.1016/j.apcatb.2015.04.029},
+    DOI={10.1016/j.apcatb.2015.04.029},
+    journal={Applied Catalysis B: Environmental},
+    publisher={Elsevier BV},
+    author={Tkachenko, O.P. and Greish, A.A. and Kucherov, A.V. and Weston, K.C. and Tsybulevski, A.M. and Kustov, L.M.},
+    year={2015},
+    month={Dec},
+    pages={521–529}
+}
+
