Changes to be committed: 	modified:   Bibtex/lib.bib

--- a/Bibtex/lib.bib
+++ b/Bibtex/lib.bib
@@ -93,3 +93,44 @@
     pages={521–529}
 }
 
+@article{Konopatsky_2018,
+    title={BN nanoparticle/Ag hybrids with enhanced catalytic activity: theory and experiments},
+    volume={8},
+    ISSN={2044-4761},
+    url={http://dx.doi.org/10.1039/C7CY02207G},
+    DOI={10.1039/c7cy02207g},
+    number={6},
+    journal={Catalysis Science & Technology},
+    publisher={Royal Society of Chemistry (RSC)},
+    author={Konopatsky, Anton S. and Firestein, Konstantin L. and Leybo, Denis V. and Popov, Zakhar I. and Larionov, Konstantin V. and Steinman, Alexander E. and Kovalskii, Andrey M. and Matveev, Andrei T. and Manakhov, Anton M. and Sorokin, Pavel B. and et al.},
+    year={2018},
+    pages={1652–1662}
+}
+
+@article{KOVALSKII2020125109,
+title = {(Ni,Cu)/hexagonal BN nanohybrids – New efficient catalysts for methanol steam reforming and carbon monoxide oxidation},
+journal = {Chemical Engineering Journal},
+volume = {395},
+pages = {125109},
+year = {2020},
+issn = {1385-8947},
+doi = {https://doi.org/10.1016/j.cej.2020.125109},
+url = {https://www.sciencedirect.com/science/article/pii/S1385894720311013},
+author = {Andrey M. Kovalskii and Andrei T. Matveev and Zakhar I. Popov and Ilia N. Volkov and Ekaterina V. Sukhanova and Aleksandra A. Lytkina and Andrey B. Yaroslavtsev and Anton S. Konopatsky and Denis V. Leybo and Andrey V. Bondarev and Igor V. Shchetinin and Konstantin L. Firestein and Dmitry V. Shtansky and Dmitri V. Golberg},
+keywords = {Methanol steam reforming, Carbon monoxide oxidation, Catalytic activity, Hexagonal BN, (NiCu)/BN nanohybrids, Microstructure},
+abstract = {This work is aimed at the development of bimetallic (Ni0.2Cu0.8) catalysts with hexagonal boron nitride (h-BN) nanosheet (BNNS) supports and elucidating their catalytic activity in the methanol steam reforming and CO oxidation reactions. The hybrid Ni0.2Cu0.8/BN catalysts consist of curved h-BN nanosheets, up to 10–20 nm in lateral size, decorated with metallic nanoparticles, 3.0–8.2 nm in dimensions. The methanol conversion starts at ~20 °C and is nearly completed at 320 °C. The (Ni0.2Cu0.8)/BN nanohybrids exhibit high catalytic stability and high selectivity for CO2 over the whole temperature range. No carbon monoxide is detected during full methanol conversion. The possible mechanism of CO utilization during methanol reforming is proposed using ab initio calculations. The onset temperature of catalytic CO oxidation is 100 °C and full conversion is completed at 200 °C. These results indicate high catalytic efficiency of (Ni0.2Cu0.8)/BN nanohybrids in methanol steam reforming and CO oxidation reactions.}
+}@article{Matveev_2020,
+    title={New insights into synthesis of nanocrystalline hexagonal BN},
+    volume={46},
+    ISSN={0272-8842},
+    url={http://dx.doi.org/10.1016/j.ceramint.2020.05.041},
+    DOI={10.1016/j.ceramint.2020.05.041},
+    number={12},
+    journal={Ceramics International},
+    publisher={Elsevier BV},
+    author={Matveev, A.T. and Permyakova, E.S. and Kovalskii, A.M. and Leibo, D. and Shchetinin, I.V. and Maslakov, K.I. and Golberg, D.V. and Shtansky, D.V. and Konopatsky, A.S.},
+    year={2020},
+    month={Aug},
+    pages={19866–19872}
+}
+
