--- a/Bibtex/lib.bib
+++ b/Bibtex/lib.bib
@@ -108,7 +108,7 @@
 }
 
 @article{KOVALSKII2020125109,
-title = {(Ni,Cu)/hexagonal BN nanohybrids – New efficient catalysts for methanol steam reforming and carbon monoxide oxidation},
+title = {(Ni, Cu)/hexagonal BN nanohybrids – New efficient catalysts for methanol steam reforming and carbon monoxide oxidation},
 journal = {Chemical Engineering Journal},
 volume = {395},
 pages = {125109},
@@ -119,7 +119,9 @@ url = {https://www.sciencedirect.com/science/article/pii/S1385894720311013},
 author = {Andrey M. Kovalskii and Andrei T. Matveev and Zakhar I. Popov and Ilia N. Volkov and Ekaterina V. Sukhanova and Aleksandra A. Lytkina and Andrey B. Yaroslavtsev and Anton S. Konopatsky and Denis V. Leybo and Andrey V. Bondarev and Igor V. Shchetinin and Konstantin L. Firestein and Dmitry V. Shtansky and Dmitri V. Golberg},
 keywords = {Methanol steam reforming, Carbon monoxide oxidation, Catalytic activity, Hexagonal BN, (NiCu)/BN nanohybrids, Microstructure},
 abstract = {This work is aimed at the development of bimetallic (Ni0.2Cu0.8) catalysts with hexagonal boron nitride (h-BN) nanosheet (BNNS) supports and elucidating their catalytic activity in the methanol steam reforming and CO oxidation reactions. The hybrid Ni0.2Cu0.8/BN catalysts consist of curved h-BN nanosheets, up to 10–20 nm in lateral size, decorated with metallic nanoparticles, 3.0–8.2 nm in dimensions. The methanol conversion starts at ~20 °C and is nearly completed at 320 °C. The (Ni0.2Cu0.8)/BN nanohybrids exhibit high catalytic stability and high selectivity for CO2 over the whole temperature range. No carbon monoxide is detected during full methanol conversion. The possible mechanism of CO utilization during methanol reforming is proposed using ab initio calculations. The onset temperature of catalytic CO oxidation is 100 °C and full conversion is completed at 200 °C. These results indicate high catalytic efficiency of (Ni0.2Cu0.8)/BN nanohybrids in methanol steam reforming and CO oxidation reactions.}
-}@article{Matveev_2020,
+}
+
+@article{Matveev_2020,
     title={New insights into synthesis of nanocrystalline hexagonal BN},
     volume={46},
     ISSN={0272-8842},
@@ -132,5 +134,48 @@ abstract = {This work is aimed at the development of bimetallic (Ni0.2Cu0.8) cat
     year={2020},
     month={Aug},
     pages={19866–19872}
+}
+@article{Butova_2016,
+    title={Metal-organic frameworks: structure, properties, methods of synthesis and characterization},
+    volume={85},
+    ISSN={1468-4837},
+    url={http://dx.doi.org/10.1070/RCR4554},
+    DOI={10.1070/rcr4554},
+    number={3},
+    journal={Russian Chemical Reviews},
+    publisher={IOP Publishing},
+    author={Butova, V V and Soldatov, M A and Guda, A A and Lomachenko, K A and Lamberti, C},
+    year={2016},
+    month={Mar},
+    pages={280–307}
+}
+@article{Doebelin_2015,
+    title={Profex: a graphical user interface for the Rietveld refinement programBGMN},
+    volume={48},
+    ISSN={1600-5767},
+    url={http://dx.doi.org/10.1107/S1600576715014685},
+    DOI={10.1107/s1600576715014685},
+    number={5},
+    journal={Journal of Applied Crystallography},
+    publisher={International Union of Crystallography (IUCr)},
+    author={Doebelin, Nicola and Kleeberg, Reinhard},
+    year={2015},
+    month={Aug},
+    pages={1573–1580}
+}
+
+@article{Gra_ulis_2009,
+    title={Crystallography Open Database – an open-access collection of crystal structures},
+    volume={42},
+    ISSN={0021-8898},
+    url={http://dx.doi.org/10.1107/S0021889809016690},
+    DOI={10.1107/s0021889809016690},
+    number={4},
+    journal={Journal of Applied Crystallography},
+    publisher={International Union of Crystallography (IUCr)},
+    author={Gražulis, Saulius and Chateigner, Daniel and Downs, Robert T. and Yokochi, A. F. T. and Quirós, Miguel and Lutterotti, Luca and Manakova, Elena and Butkus, Justas and Moeck, Peter and Le Bail, Armel},
+    year={2009},
+    month={May},
+    pages={726–729}
 }
 
