--- a/Bibtex/lib.bib
+++ b/Bibtex/lib.bib
@@ -1,14 +1,17 @@
-@article{Gautam_2015,
-	doi = {10.1016/j.molliq.2015.09.006},
-	url = {https://doi.org/10.1016%2Fj.molliq.2015.09.006},
-	year = 2015,
-	month = {dec},
-	publisher = {Elsevier {BV}},
-	volume = {212},
-	pages = {227--236},
-	author = {Ravindra Kumar Gautam and Vandani Rawat and Sushmita Banerjee and Maria Angeles Sanroman and Shivani Soni and Sanjeev K. Singh and Mahesh Chandra Chattopadhyaya},
-	title = {Synthesis of bimetallic Fe{\textendash}Zn nanoparticles and its application towards adsorptive removal of carcinogenic dye malachite green and Congo red in water},
-	journal = {Journal of Molecular Liquids}
+% Encoding: UTF-8
+
+@Article{Gautam_2015,
+  author    = {Ravindra Kumar Gautam and Vandani Rawat and Sushmita Banerjee and Maria Angeles Sanroman and Shivani Soni and Sanjeev K. Singh and Mahesh Chandra Chattopadhyaya},
+  journal   = {Journal of Molecular Liquids},
+  title     = {Synthesis of bimetallic Fe{\textendash}Zn nanoparticles and its application towards adsorptive removal of carcinogenic dye malachite green and Congo red in water},
+  year      = {2015},
+  month     = {dec},
+  pages     = {227--236},
+  volume    = {212},
+  doi       = {10.1016/j.molliq.2015.09.006},
+  file      = {:/home/volk/Library/PDFs/Gautam_2015.pdf:PDF},
+  publisher = {Elsevier {BV}},
+  url       = {https://doi.org/10.1016%2Fj.molliq.2015.09.006},
 }
 
 @article{Wang_2021,
@@ -179,3 +182,4 @@ abstract = {This work is aimed at the development of bimetallic (Ni0.2Cu0.8) cat
     pages={726–729}
 }
 
+@Comment{jabref-meta: databaseType:bibtex;}
