--- a/lib.bib
+++ b/lib.bib
@@ -1,231 +1,1 @@
-@article{Borchers_2019,
- author = {Borchers, Ch. and Martin, M. L. and Vorobjeva, G. A. and Morozova, O. S. and Firsova, A. A. and Leonov, A. V. and Kurmaev, E. Z. and Kukharenko, A. I. and Zhidkov, I. S. and Cholakh, S. O.},
- doi = {10.1063/1.5109067},
- issn = {2158-3226},
- journal = {AIP Advances},
- month = {Jun},
- number = {6},
- pages = {065115},
- publisher = {AIP Publishing},
- title = {CuO-CeO2 nanocomposite catalysts produced by mechanochemical synthesis},
- url = {http://dx.doi.org/10.1063/1.5109067},
- volume = {9},
- year = {2019}
-}
-
-@article{Butova_2016,
- author = {Butova, V V and Soldatov, M A and Guda, A A and Lomachenko, K A and Lamberti, C},
- doi = {10.1070/rcr4554},
- issn = {1468-4837},
- journal = {Russian Chemical Reviews},
- month = {Mar},
- number = {3},
- pages = {280–307},
- publisher = {IOP Publishing},
- title = {Metal-organic frameworks: structure, properties, methods of synthesis and characterization},
- url = {http://dx.doi.org/10.1070/RCR4554},
- volume = {85},
- year = {2016}
-}
-
-@article{Cabezuelo_2021,
- author = {Cabezuelo, Oscar and Martinez-Haya, Rebeca and Montes, Noelia and Bosca, Francisco and Marin, M. Luisa},
- doi = {10.1016/j.apcatb.2021.120497},
- issn = {0926-3373},
- journal = {Applied Catalysis B: Environmental},
- month = {Dec},
- pages = {120497},
- publisher = {Elsevier BV},
- title = {Heterogeneous riboflavin-based photocatalyst for pollutant oxidation through electron transfer processes},
- url = {http://dx.doi.org/10.1016/j.apcatb.2021.120497},
- volume = {298},
- year = {2021}
-}
-
-@article{chastain1992handbook,
- author = {Chastain, Jill and King Jr, Roger C},
- journal = {Perkin-Elmer, USA},
- pages = {261},
- title = {Handbook of X-ray photoelectron spectroscopy},
- year = {1992}
-}
-
-@article{Doebelin_2015,
- author = {Doebelin, Nicola and Kleeberg, Reinhard},
- doi = {10.1107/s1600576715014685},
- issn = {1600-5767},
- journal = {Journal of Applied Crystallography},
- month = {Aug},
- number = {5},
- pages = {1573–1580},
- publisher = {International Union of Crystallography (IUCr)},
- title = {Profex: a graphical user interface for the Rietveld refinement programBGMN},
- url = {http://dx.doi.org/10.1107/S1600576715014685},
- volume = {48},
- year = {2015}
-}
-
-@article{Gautam_2015,
- author = {Ravindra Kumar Gautam and Vandani Rawat and Sushmita Banerjee and Maria Angeles Sanroman and Shivani Soni and Sanjeev K. Singh and Mahesh Chandra Chattopadhyaya},
- doi = {10.1016/j.molliq.2015.09.006},
- journal = {Journal of Molecular Liquids},
- month = {dec},
- pages = {227--236},
- publisher = {Elsevier {BV}},
- title = {Synthesis of bimetallic Fe{\textendash}Zn nanoparticles and its application towards adsorptive removal of carcinogenic dye malachite green and Congo red in water},
- url = {https://doi.org/10.1016%2Fj.molliq.2015.09.006},
- volume = {212},
- year = {2015}
-}
-
-@article{Glad_2020,
- author = {Glad, Xavier and Profili, Jacopo and Cha, Min Suk and Hamdan, Ahmad},
- doi = {10.1063/1.5129647},
- issn = {1089-7550},
- journal = {Journal of Applied Physics},
- month = {Jan},
- number = {2},
- pages = {023302},
- publisher = {AIP Publishing},
- title = {Synthesis of copper and copper oxide nanomaterials by electrical discharges in water with various electrical conductivities},
- url = {http://dx.doi.org/10.1063/1.5129647},
- volume = {127},
- year = {2020}
-}
-
-@article{Gra_ulis_2009,
- author = {Gražulis, Saulius and Chateigner, Daniel and Downs, Robert T. and Yokochi, A. F. T. and Quirós, Miguel and Lutterotti, Luca and Manakova, Elena and Butkus, Justas and Moeck, Peter and Le Bail, Armel},
- doi = {10.1107/s0021889809016690},
- issn = {0021-8898},
- journal = {Journal of Applied Crystallography},
- month = {May},
- number = {4},
- pages = {726–729},
- publisher = {International Union of Crystallography (IUCr)},
- title = {Crystallography Open Database – an open-access collection of crystal structures},
- url = {http://dx.doi.org/10.1107/S0021889809016690},
- volume = {42},
- year = {2009}
-}
-
-@article{Huang_2019,
- author = {Huang, Chunlei and Wen, Jinjun and Sun, Yuhai and Zhang, Mingyuan and Bao, Yunfeng and Zhang, Yudong and Liang, Long and Fu, Mingli and Wu, Junliang and Ye, Daiqi and et al.},
- doi = {10.1016/j.cej.2019.05.123},
- issn = {1385-8947},
- journal = {Chemical Engineering Journal},
- month = {Oct},
- pages = {221–230},
- publisher = {Elsevier BV},
- title = {CO2 hydrogenation to methanol over Cu/ZnO plate model catalyst: Effects of reducing gas induced Cu nanoparticle morphology},
- url = {http://dx.doi.org/10.1016/j.cej.2019.05.123},
- volume = {374},
- year = {2019}
-}
-
-@article{Konopatsky_2018,
- author = {Konopatsky, Anton S. and Firestein, Konstantin L. and Leybo, Denis V. and Popov, Zakhar I. and Larionov, Konstantin V. and Steinman, Alexander E. and Kovalskii, Andrey M. and Matveev, Andrei T. and Manakhov, Anton M. and Sorokin, Pavel B. and et al.},
- doi = {10.1039/c7cy02207g},
- issn = {2044-4761},
- journal = {Catalysis Science & Technology},
- number = {6},
- pages = {1652–1662},
- publisher = {Royal Society of Chemistry (RSC)},
- title = {BN nanoparticle/Ag hybrids with enhanced catalytic activity: theory and experiments},
- url = {http://dx.doi.org/10.1039/C7CY02207G},
- volume = {8},
- year = {2018}
-}
-
-@article{KOVALSKII2020125109,
- abstract = {This work is aimed at the development of bimetallic (Ni0.2Cu0.8) catalysts with hexagonal boron nitride (h-BN) nanosheet (BNNS) supports and elucidating their catalytic activity in the methanol steam reforming and CO oxidation reactions. The hybrid Ni0.2Cu0.8/BN catalysts consist of curved h-BN nanosheets, up to 10–20 nm in lateral size, decorated with metallic nanoparticles, 3.0–8.2 nm in dimensions. The methanol conversion starts at ~20 °C and is nearly completed at 320 °C. The (Ni0.2Cu0.8)/BN nanohybrids exhibit high catalytic stability and high selectivity for CO2 over the whole temperature range. No carbon monoxide is detected during full methanol conversion. The possible mechanism of CO utilization during methanol reforming is proposed using ab initio calculations. The onset temperature of catalytic CO oxidation is 100 °C and full conversion is completed at 200 °C. These results indicate high catalytic efficiency of (Ni0.2Cu0.8)/BN nanohybrids in methanol steam reforming and CO oxidation reactions.},
- author = {Andrey M. Kovalskii and Andrei T. Matveev and Zakhar I. Popov and Ilia N. Volkov and Ekaterina V. Sukhanova and Aleksandra A. Lytkina and Andrey B. Yaroslavtsev and Anton S. Konopatsky and Denis V. Leybo and Andrey V. Bondarev and Igor V. Shchetinin and Konstantin L. Firestein and Dmitry V. Shtansky and Dmitri V. Golberg},
- doi = {https://doi.org/10.1016/j.cej.2020.125109},
- issn = {1385-8947},
- journal = {Chemical Engineering Journal},
- keywords = {Methanol steam reforming, Carbon monoxide oxidation, Catalytic activity, Hexagonal BN, (NiCu)/BN nanohybrids, Microstructure},
- pages = {125109},
- title = {(Ni, Cu)/hexagonal BN nanohybrids – New efficient catalysts for methanol steam reforming and carbon monoxide oxidation},
- url = {https://www.sciencedirect.com/science/article/pii/S1385894720311013},
- volume = {395},
- year = {2020}
-}
-
-@article{Matveev_2020,
- author = {Matveev, A.T. and Permyakova, E.S. and Kovalskii, A.M. and Leibo, D. and Shchetinin, I.V. and Maslakov, K.I. and Golberg, D.V. and Shtansky, D.V. and Konopatsky, A.S.},
- doi = {10.1016/j.ceramint.2020.05.041},
- issn = {0272-8842},
- journal = {Ceramics International},
- month = {Aug},
- number = {12},
- pages = {19866–19872},
- publisher = {Elsevier BV},
- title = {New insights into synthesis of nanocrystalline hexagonal BN},
- url = {http://dx.doi.org/10.1016/j.ceramint.2020.05.041},
- volume = {46},
- year = {2020}
-}
-
-@article{sharma_sharma2021,
- author = {Shweta Sharma and Gaurav Sharma and Amit Kumar and Pooja Dhiman and TahaniSaad AlGarni and Mu. Naushad and ZeidA. ALOthman and Florian J. Stadler},
- doi = {10.1016/j.seppur.2021.119481},
- file = {:/home/volk/Library/PDFs/pdfft.pdf:pdf},
- month = {aug},
- pages = {119481},
- publisher = {Elsevier {BV}},
- title = {Controlled synthesis of porous Zn/Fe based layered double hydroxides: Synthesis mechanism, and ciprofloxacin adsorption},
- url = {https://doi.org/10.1016%2Fj.seppur.2021.119481},
- year = {2021}
-}
-
-@article{Tkachenko_2015,
- author = {Tkachenko, O.P. and Greish, A.A. and Kucherov, A.V. and Weston, K.C. and Tsybulevski, A.M. and Kustov, L.M.},
- doi = {10.1016/j.apcatb.2015.04.029},
- issn = {0926-3373},
- journal = {Applied Catalysis B: Environmental},
- month = {Dec},
- pages = {521–529},
- publisher = {Elsevier BV},
- title = {Low-temperature CO oxidation by transition metal polycation exchanged low-silica faujasites},
- url = {http://dx.doi.org/10.1016/j.apcatb.2015.04.029},
- volume = {179},
- year = {2015}
-}
-
-@article{Wang_2021,
- author = {Wang, Na and Quan, Yanhong and Zhao, Jinxian and Li, Haixia and Ren, Jun},
- doi = {10.1016/j.mcat.2021.111514},
- issn = {2468-8231},
- journal = {Molecular Catalysis},
- month = {Apr},
- pages = {111514},
- publisher = {Elsevier BV},
- title = {Highly active CuZn/SBA-15 catalyst for methanol dehydrogenation to methyl formate: Influence of ZnO promoter},
- url = {http://dx.doi.org/10.1016/j.mcat.2021.111514},
- volume = {505},
- year = {2021}
-}
-
-@article{Woyessa_2021,
- author = {Woyessa, Girma W. and dela Cruz, Jay-ar B. and Rameez, Mohammad and Hung, Chen-Hsiung},
- doi = {10.1016/j.apcatb.2021.120052},
- issn = {0926-3373},
- journal = {Applied Catalysis B: Environmental},
- month = {Aug},
- pages = {120052},
- publisher = {Elsevier BV},
- title = {Nanocomposite catalyst of graphitic carbon nitride and Cu/Fe mixed metal oxide for electrochemical CO2 reduction to CO},
- url = {http://dx.doi.org/10.1016/j.apcatb.2021.120052},
- volume = {291},
- year = {2021}
-}
-
-@article{Yanti_2020,
- author = {Yanti, Fusia Mirda and Valentino, Novio and Juwita, Asmi Rima and Murti, S. D. Sumbogo and Pertiwi, Astri and Rahmawati, Nurdiah and Rini, Tyas Puspita and Sholihah, Atti and Prasetyo, Joni and Saputra, Hens and et al.},
- doi = {10.1063/5.0000870},
- journal = {INTERNATIONAL ENERGY CONFERENCE ASTECHNOVA 2019},
- publisher = {AIP Publishing},
- title = {Methanol production from biomass syngas using Cu/ZnO/Al2O3 catalyst},
- url = {http://dx.doi.org/10.1063/5.0000870},
- year = {2020}
-}
-
+/home/volk/Library/Bibtex/lib.bib
