--- a/Bibtex/lib.bib
+++ b/Bibtex/lib.bib
@@ -204,6 +204,20 @@
  year = {2021}
 }
 
+@article{wang_peng2021,
+ author = {Lei Wang and Hongjie Peng and Sarah Lamaison and Zhifu Qi and David M. Koshy and Michaela Burke Stevens and David Wakerley and Jos{\'{e}} A. Zamora Zeled{\'{o}}n and Laurie A. King and Lan Zhou and Yungchieh Lai and Marc Fontecave and John Gregoire and Frank Abild-Pedersen and Thomas F. Jaramillo and Christopher Hahn},
+ doi = {10.1016/j.checat.2021.05.006},
+ file = {:/home/volk/Library/PDFs/2021/wang_peng2021.pdf:pdf},
+ month = {aug},
+ number = {3},
+ pages = {663--680},
+ publisher = {Elsevier {BV}},
+ title = {Bimetallic effects on Zn-Cu electrocatalysts enhance activity and selectivity for the conversion of {CO}2 to {CO}},
+ url = {https://doi.org/10.1016%2Fj.checat.2021.05.006},
+ volume = {1},
+ year = {2021}
+}
+
 @article{Woyessa_2021,
  author = {Woyessa, Girma W. and dela Cruz, Jay-ar B. and Rameez, Mohammad and Hung, Chen-Hsiung},
  doi = {10.1016/j.apcatb.2021.120052},
@@ -227,3 +241,4 @@
  url = {http://dx.doi.org/10.1063/5.0000870},
  year = {2020}
 }
+
