--- a/Bibtex/lib.bib
+++ b/Bibtex/lib.bib
@@ -106,6 +106,19 @@
  year = {2015}
 }
 
+@article{feng_liu2021,
+ author = {Chenglin Feng and Xiaolong Liu and Tingyu Zhu and Yutao Hu and Mengkui Tian},
+ doi = {10.1016/j.apcata.2021.118218},
+ file = {:/home/volk/Library/PDFs/2021/feng_liu2021.pdf:pdf},
+ month = {jul},
+ pages = {118218},
+ publisher = {Elsevier {BV}},
+ title = {Catalytic oxidation of {CO} over Pt/{TiO}2 with low Pt loading: The effect of H2O and {SO}2},
+ url = {https://doi.org/10.1016%2Fj.apcata.2021.118218},
+ volume = {622},
+ year = {2021}
+}
+
 @article{Gautam_2015,
  author = {Ravindra Kumar Gautam and Vandani Rawat and Sushmita Banerjee and Maria Angeles Sanroman and Shivani Soni and Sanjeev K. Singh and Mahesh Chandra Chattopadhyaya},
  doi = {10.1016/j.molliq.2015.09.006},
@@ -230,6 +243,20 @@
  year = {2021}
 }
 
+@article{song_dong2021,
+ author = {Tongyuan Song and Jinhu Dong and Rongtan Li and Xiaoyan Xu and Matsumoto Hiroaki and Bing Yang and Rankun Zhang and Yunxing Bai and Hui Xin and Le Lin and Rentao Mu and Qiang Fu and Xinhe Bao},
+ doi = {10.1021/acs.jpclett.1c00934},
+ file = {:/home/volk/Library/PDFs/2021/song_dong2021.pdf:pdf},
+ month = {apr},
+ number = {17},
+ pages = {4187--4194},
+ publisher = {American Chemical Society ({ACS})},
+ title = {Oxidative Strong Metal{\textendash}Support Interactions between Metals and Inert Boron Nitride},
+ url = {https://doi.org/10.1021%2Facs.jpclett.1c00934},
+ volume = {12},
+ year = {2021}
+}
+
 @article{Tkachenko_2015,
  author = {Tkachenko, O.P. and Greish, A.A. and Kucherov, A.V. and Weston, K.C. and Tsybulevski, A.M. and Kustov, L.M.},
  doi = {10.1016/j.apcatb.2015.04.029},
@@ -270,6 +297,19 @@
  url = {https://doi.org/10.1016%2Fj.checat.2021.05.006},
  volume = {1},
  year = {2021}
+}
+
+@article{wei_wang2019,
+ author = {Shuai Wei and Wei-Wei Wang and Xin-Pu Fu and Shan-Qing Li and Chun-Jiang Jia},
+ doi = {10.1016/j.jcat.2019.06.038},
+ file = {:/home/volk/Library/PDFs/2019/wei_wang2019.pdf:pdf},
+ month = {aug},
+ pages = {134--145},
+ publisher = {Elsevier {BV}},
+ title = {The effect of reactants adsorption and products desorption for Au/{TiO}2 in catalyzing {CO} oxidation},
+ url = {https://doi.org/10.1016%2Fj.jcat.2019.06.038},
+ volume = {376},
+ year = {2019}
 }
 
 @article{Woyessa_2021,
