--- a/Bibtex/lib.bib
+++ b/Bibtex/lib.bib
@@ -1,3 +1,14 @@
+@article{abbas_sial2021,
+ author = {Muhammad Abbas and Muhammad Aurang Zeb Gul Sial},
+ doi = {10.1016/j.nanoms.2021.07.009},
+ file = {:/home/volk/Library/PDFs/2021/abbas_sial2021.pdf:pdf},
+ month = {jul},
+ publisher = {Elsevier {BV}},
+ title = {New Horizon in stabilization of single atoms on metal-oxide supports for {CO}2 reduction},
+ url = {https://doi.org/10.1016%2Fj.nanoms.2021.07.009},
+ year = {2021}
+}
+
 @article{amini_rezaei2015,
  author = {Amini, Ehsan and Rezaei, Mehran},
  doi = {10.1016/s1872-2067(15)60922-6},
@@ -89,6 +100,19 @@
  url = {https://doi.org/10.1016%2Fj.jcou.2016.07.002},
  volume = {16},
  year = {2016}
+}
+
+@article{ding_chen2021,
+ author = {Shipeng Ding and Hsi-An Chen and Okorn Mekasuwandumrong and Max J. HÃ¼lsey and Xinpu Fu and Qian He and Joongjai Panpranot and Chia-Min Yang and Ning Yan},
+ doi = {10.1016/j.apcatb.2020.119471},
+ file = {:/home/volk/Library/PDFs/2021/ding_chen2021.pdf:pdf},
+ month = {feb},
+ pages = {119471},
+ publisher = {Elsevier {BV}},
+ title = {High-temperature flame spray pyrolysis induced stabilization of Pt single-atom catalysts},
+ url = {https://doi.org/10.1016%2Fj.apcatb.2020.119471},
+ volume = {281},
+ year = {2021}
 }
 
 @article{Doebelin_2015,
@@ -229,6 +253,34 @@
  year = {2009}
 }
 
+@article{lin_zhou2017,
+ author = {Lili Lin and Wu Zhou and Rui Gao and Siyu Yao and Xiao Zhang and Wenqian Xu and Shijian Zheng and Zheng Jiang and Qiaolin Yu and Yong-Wang Li and Chuan Shi and Xiao-Dong Wen and Ding Ma},
+ doi = {10.1038/nature21672},
+ file = {:/home/volk/Library/PDFs/2017/lin_zhou2017.pdf:pdf},
+ month = {mar},
+ number = {7648},
+ pages = {80--83},
+ publisher = {Springer Science and Business Media {LLC}},
+ title = {Low-temperature hydrogen production from water and methanol using Pt/$\upalpha$-{MoC} catalysts},
+ url = {https://doi.org/10.1038%2Fnature21672},
+ volume = {544},
+ year = {2017}
+}
+
+@article{maiti_maiti2021,
+ author = {Kakali Maiti and Sandip Maiti and Matthew T. Curnan and Hyung Jun Kim and Jeong Woo Han},
+ doi = {10.1002/aenm.202101670},
+ file = {:/home/volk/Library/PDFs/2021/maiti_maiti2021.pdf:pdf},
+ month = {aug},
+ number = {38},
+ pages = {2101670},
+ publisher = {Wiley},
+ title = {Engineering Single Atom Catalysts to Tune Properties for Electrochemical Reduction and Evolution Reactions},
+ url = {https://doi.org/10.1002%2Faenm.202101670},
+ volume = {11},
+ year = {2021}
+}
+
 @article{makaryan_sedov2021,
  author = {I. A. Makaryan and I. V. Sedov},
  doi = {10.1134/s0965544121090085},
@@ -272,6 +324,20 @@
  year = {2013}
 }
 
+@article{qiao_wang2011,
+ author = {Botao Qiao and Aiqin Wang and Xiaofeng Yang and Lawrence F. Allard and Zheng Jiang and Yitao Cui and Jingyue Liu and Jun Li and Tao Zhang},
+ doi = {10.1038/nchem.1095},
+ file = {:/home/volk/Library/PDFs/2011/qiao_wang2011.pdf:pdf},
+ month = {jul},
+ number = {8},
+ pages = {634--641},
+ publisher = {Springer Science and Business Media {LLC}},
+ title = {Single-atom catalysis of {CO} oxidation using Pt1/{FeOx}},
+ url = {https://doi.org/10.1038%2Fnchem.1095},
+ volume = {3},
+ year = {2011}
+}
+
 @article{sharma_sharma2021,
  author = {Shweta Sharma and Gaurav Sharma and Amit Kumar and Pooja Dhiman and TahaniSaad AlGarni and Mu. Naushad and ZeidA. ALOthman and Florian J. Stadler},
  doi = {10.1016/j.seppur.2021.119481},
@@ -282,6 +348,20 @@
  title = {Controlled synthesis of porous Zn/Fe based layered double hydroxides: Synthesis mechanism, and ciprofloxacin adsorption},
  url = {https://doi.org/10.1016%2Fj.seppur.2021.119481},
  year = {2021}
+}
+
+@article{shin_jung2020,
+ author = {Hamin Shin and Wan-Gil Jung and Dong-Ha Kim and Ji-Soo Jang and Yoon Hwa Kim and Won-Tae Koo and Jaehyeong Bae and Chungseong Park and Su-Ho Cho and Bong Joong Kim and Il-Doo Kim},
+ doi = {10.1021/acsnano.0c03687},
+ file = {:/home/volk/Library/PDFs/2020/shin_jung2020.pdf:pdf},
+ month = {aug},
+ number = {9},
+ pages = {11394--11405},
+ publisher = {American Chemical Society ({ACS})},
+ title = {Single-Atom Pt Stabilized on One-Dimensional Nanostructure Support via Carbon Nitride/{SnO}2 Heterojunction Trapping},
+ url = {https://doi.org/10.1021%2Facsnano.0c03687},
+ volume = {14},
+ year = {2020}
 }
 
 @article{song_dong2021,
@@ -298,6 +378,20 @@
  year = {2021}
 }
 
+@article{song_yang2021,
+ author = {Jiaojiao Song and Yixuan Yang and Shoujie Liu and Lei Li and Nan Yu and Yuteng Fan and Zhiming Chen and Long Kuai and Baoyou Geng},
+ doi = {10.1007/s12274-021-3443-7},
+ file = {:/home/volk/Library/PDFs/2021/song_yang2021.pdf:pdf},
+ month = {may},
+ number = {12},
+ pages = {4841--4847},
+ publisher = {Springer Science and Business Media {LLC}},
+ title = {Dispersion and support dictated properties and activities of Pt/metal oxide catalysts in heterogeneous {CO} oxidation},
+ url = {https://doi.org/10.1007%2Fs12274-021-3443-7},
+ volume = {14},
+ year = {2021}
+}
+
 @article{sun_fu2017,
  author = {Mengmeng Sun and Qiang Fu and Lijun Gao and Yanping Zheng and Yangyang Li and Mingshu Chen and Xinhe Bao},
  doi = {10.1007/s12274-017-1512-8},
@@ -310,6 +404,20 @@
  url = {https://doi.org/10.1007%2Fs12274-017-1512-8},
  volume = {10},
  year = {2017}
+}
+
+@article{tang_chen2021,
+ author = {Yanan Tang and Weiguang Chen and Gao Zhao and Da Teng and Yingqi Cui and Zhaohan Li and Zhen Feng and Xianqi Dai},
+ doi = {10.1002/cphc.202001021},
+ file = {:/home/volk/Library/PDFs/2021/tang_chen2021.pdf:pdf},
+ month = {feb},
+ number = {6},
+ pages = {606--618},
+ publisher = {Wiley},
+ title = {Comparative Study of {NO} and {CO} Oxidation Reactions on Single-Atom Catalysts Anchored Graphene-like Monolayer},
+ url = {https://doi.org/10.1002%2Fcphc.202001021},
+ volume = {22},
+ year = {2021}
 }
 
 @article{Thuy-mai_2017,
@@ -339,6 +447,15 @@ https://doi.org/10.1021/acscatal.7b01374},
  url = {http://dx.doi.org/10.1016/j.apcatb.2015.04.029},
  volume = {179},
  year = {2015}
+}
+
+@article{unknownNone,
+ doi = {10.21203/rs.2.15100/v1},
+ file = {:/home/volk/Library/PDFs/None/unknownNone.pdf:pdf},
+ publisher = {Research Square Platform LLC},
+ title = {Single atom fabrication with beams and probes},
+ url = {http://dx.doi.org/10.21203/rs.2.15100/v1},
+ year = {None}
 }
 
 @article{Wang_2021,
