--- a/Journal/org_notes.org
+++ b/Journal/org_notes.org
@@ -35,3 +35,8 @@
   - [ ] Принять душ
   - [ ] Побриться
   [2021-12-12 Вс]
+* TODO Оформить АКТ испытаний Штанскому
+  [2021-12-16 Чт]
+* TODO Написать ноу-хау
+  DEADLINE: <2021-12-16 Чт>
+  [2021-12-16 Чт]
